src/snapshots/librojo__serve_session__serve_session__change_file_in_project_patch.snap
---
source: src/serve_session.rs
expression: redactions.redacted_yaml(result)
---
- 1
- - removed: []
    added: []
    updated:
      - id: id-2
        changed_name: ~
        changed_class_name: ~
        changed_properties:
          Value:
            Type: String
            Value: Changed!
        changed_metadata: ~
